fix scrollbar

--- a/src/theme/globalcss/main.scss
+++ b/src/theme/globalcss/main.scss
@@ -371,8 +371,8 @@
   overflow: overlay;
   ::-webkit-scrollbar {
     width: 5px;
-    padding: 2;
     opacity: 0;
+    padding: 2;
     visibility: hidden;
   }
   ::-webkit-scrollbar-track {
@@ -385,7 +385,6 @@
     border-radius: 6px;
     opacity: 0;
     visibility: hidden;
-    transition: all 0.5s ease;
   }
 }
 .scroll-bar:hover {
@@ -394,8 +393,6 @@
   width: 100%;
   overflow-x: hidden;
   margin-right: 1px;
-  scrollbar-color: #222 transparent;
-  scrollbar-width: thin;
   ::-webkit-scrollbar {
     width: 5px;
     opacity: 1;
